added a login view with route logic

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,15 @@
+html {
+  background: gray;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: white;
+}
+
+p {
+  color: red;
 }
 
 a {
